# LFT

./: .gitignore  CMakeLists.txt  CREDITS.md  jupytext.toml
ising/: borders.Rmd  correlations.Rmd  edges.Rmd  magnetisation.Rmd  run.py  test.Rmd
math/: chi.nb  dkl.nb  rho.nb  tss.nb
notebooks/: ising.Rmd  ising1d.Rmd  ising3d.Rmd  ising_stats.Rmd  mag.Rmd  phi4.Rmd  stats_utils.py  xy.Rmd
notebooks/EdwardsAnderson/MC tests/: ea_mc_test_4x4.Rmd  ea_mc_test_4x6.Rmd  mc_test.Rmd
notebooks/EdwardsAnderson/Transformers/: check_cfg.Rmd  convert_J.Rmd  ea.py  mc.Rmd
notebooks/Ising/: bt.txt  ising.Rmd  ising3d.Rmd  ising_mc.Rmd  ising_stats.Rmd
scripts/: run_jobs.py  run_phi4_jobs.py  run_xy_jobs.py
src/Drivers/: ea.cpp  ea_q.cpp  ising.cpp  ising1d.cpp  ising3d.cpp  ising_base_options.cpp  ising_base_options.h  phi4.cpp  xy.cpp
src/EdwardsAnderson/: CMakeLists.txt  ea.h  ea_q.cpp  options.cpp  options.h  parallel_tempering.cpp  parallel_tempering.h
src/LFT/: CMakeLists.txt
src/LFT/EdwardsAnderson/: ea.h  parallel_tempering.h
src/LFT/Field/: Field.cpp  Field.h  Lattice.cpp  Lattice.h
src/LFT/Ising/: Wolff.h  correlation_function.h  ising.h
src/LFT/MonteCarlo/: sweep.h
src/LFT/Phi4/: phi4.h  vec_phi4.h
src/LFT/Potts/: potts.h
src/LFT/XY/: xy.h
src/Threading/: example.cpp  thread_pool.hpp
src/misc/: normal.cpp
src/utils/: extract.cpp  extract.h  fs.cpp  fs.h  hardware.cpp  hardware.h  rand.cpp  rand.h
tests/: CMakeLists.txt  test.cpp  test_Field.cpp  test_Field_C.cpp  test_Lattice.cpp  test_Lattice_C.cpp  test_ising.cpp  test_multiindex.cpp  test_multiindex_C.cpp  test_sweep.cpp
